# Sorting-Algorithms-ED

./: Estatistica - Sorting Algoritms.xlsx  ORDENACAO E ANALISE DE ALGORITMOS DE ORDENACAO.docx  README.md
Codigos/: CMakeLists.txt  Heap Sort.c  Insertion Sort.c  Merge Sort.c  Quick Sort.c  Selection Sort.c  Sorting Algorithms.c  Testes.c  Tim Sort.c
