cmake_minimum_required(VERSION 3.26)
project(Trabalho_Avaliativo_2 C)

set(CMAKE_C_STANDARD 11)

add_executable(Trabalho_Avaliativo_2
        "Tim Sort.c"
        "Heap Sort.c"
        "Selection Sort.c"
        "Insertion Sort.c"
        "Merge Sort.c"
        "Quick Sort.c"
        "Sorting Algorithms.c"
        Testes.c
)
